[gd_scene load_steps=4 format=2]

[ext_resource path="res://Boomerrang.gd" type="Script" id=1]
[ext_resource path="res://Boomerrang place-in.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.07588, 1.95825 )

[node name="Boomerrang" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.612493 )
shape = SubResource( 1 )
disabled = true

[node name="CollisionsEnabledTimer" type="Timer" parent="."]
wait_time = 0.45
one_shot = true
autostart = true

[node name="LastTimerISwear" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="GoBackToPlayer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="CollisionsEnabledTimer" to="." method="_on_CollisionsEnabledTimer_timeout"]
[connection signal="timeout" from="LastTimerISwear" to="." method="_on_LastTimerISwear_timeout"]
[connection signal="timeout" from="GoBackToPlayer" to="." method="_on_GoBackToPlayer_timeout"]
